updated navigation, progress view

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,10 +3,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://dpg-d29pjbfgi27c73amouig-a.frankfurt-postgres.render.com:5432/petapp
-    username: petapp_user
-    password: 8mJAByyWEWCCbUGOrMNErQhVJugyUIV2
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://database-1.cx0iygoqyfre.eu-central-1.rds.amazonaws.com:5432/postgres
+    username: postgres
+    password: g9T4ow$2*E7,72BZ;MCxiOE9qBOz!WK$
   web:
     resources:
       static-locations: classpath:/static/, file:uploads/
@@ -18,3 +17,4 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
